--- a/toms-electric/public/index.html
+++ b/toms-electric/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Tom's Electric Inc. provides expert residential and commercial electrical services in Suffolk County, NY. Contact us today for installations, repairs, and more!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
