Custom Favicon and Logo Resizing

--- a/toms-electric/public/index.html
+++ b/toms-electric/public/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/web-style/logo_only.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Tom's Electric Inc. provides expert residential and commercial electrical services in Suffolk County, NY. Contact us today for installations, repairs, and more!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Tom's Electric Inc.</title>
+
+    <!-- Favicon and Logos -->
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/logo/favicon.svg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Tom's Electric" />
+    <link rel="manifest" href="%PUBLIC_URL%/logo/site.webmanifest" />
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -22,6 +27,7 @@
     </script>
     <!-- End Google Tag Manager -->
   </head>
+  
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W92NFW9X"
