--- a/toms-electric/public/index.html
+++ b/toms-electric/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1e2022" />
     <meta
       name="description"
       content="Tom's Electric Inc. provides expert residential and commercial electrical services in Suffolk County, NY. Contact us today for installations, repairs, and more!"
@@ -27,7 +27,7 @@
     </script>
     <!-- End Google Tag Manager -->
   </head>
-  
+
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W92NFW9X"
